# asimov-protocol

./: .gitignore  .markdownlint.json  .markdownlint.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LICENSE  Makefile  README.md  ethics.yaml  forge-protocol-linux-x64  green.yaml  references.yaml  roadmap.yaml  sprint.yaml  warmup.yaml
.asimov/: asimov.yaml  ethics.yaml  freshness.yaml  green.yaml  project.yaml  roadmap.yaml  sprint.yaml  sycophancy.yaml  warmup.json  warmup.yaml
.asimov/hooks/: pre-commit.sh.tpl  pre-compact.sh.tpl  session-start.sh.tpl
.asimov/protocols/: asimov.json  freshness.json  green.json  kingship.json  migrations.json  sprint.json  warmup.json
.asimov/roles/: ai.json  biz.json  eng.json  fin.json  pm.json  qa.json
.asimov/templates/: admin-dashboard.yaml  api-go.yaml  api-nestjs.yaml  api-spring.yaml  arch.yaml  flutter.yaml  generic.yaml  go.yaml  mono-nx.yaml  mono-turbo.yaml  node.yaml  python.yaml  rust.yaml  web-angular.yaml  web-nextjs.yaml  web-react.yaml  web-vue.yaml
.cargo-husky/hooks/: pre-commit
.claude/hooks/: pre-compact.sh  session-start.sh
.github/workflows/: ci.yml  close-external-prs.yml  release.yml
cli/: Cargo.toml
cli/.asimov/: green.yaml  roadmap.yaml  sprint.yaml  sycophancy.yaml  warmup.yaml
cli/.cargo-husky/hooks/: pre-commit
cli/protocols/: coding-standards.json  freshness.json  sprint.json  sycophancy.json
cli/src/: commands.rs  error.rs  ethics.rs  green.rs  lib.rs  main.rs  markdown.rs  output.rs  semantic.rs  sycophancy.rs  templates.rs  update.rs  validator.rs
cli/src/commands/: doctor.rs  init.rs  launch.rs  lint_docs.rs  mod.rs  refresh.rs  replay.rs  stats.rs  update.rs  validate.rs  warmup.rs
cli/src/protocols/: asimov.tpl  exhaustive.tpl  freshness.tpl  green.tpl  kingship.tpl  mod.rs  sprint.tpl  sycophancy.tpl  warmup.tpl
cli/src/schemas/: asimov.rs  checkpoint.rs  ethics.rs  freshness.rs  green.rs  mod.rs  project.rs  roadmap.rs  sprint.rs  sycophancy.rs  warmup.rs
cli/src/templates/: hooks.rs  mod.rs  project-docs.yaml.tpl  project-flutter.yaml.tpl  project-generic.yaml.tpl  project-go.yaml.tpl  project-node.yaml.tpl  project-python.yaml.tpl  project-rust.yaml.tpl  project.rs  protocols.rs  warmup.rs
cli/templates/: admin-dashboard.yaml  api-fastapi.yaml  api-go.yaml  api-nestjs.yaml  api-rust.yaml  api-spring.yaml  arch.yaml  docs.yaml  go.yaml  mono-nx.yaml  mono-pnpm.yaml  mono-turbo.yaml  node.yaml  python.yaml  web-react.yaml
cli/templates/enterprise/: admin-dashboard.yaml  api-fastapi.yaml  api-rust.yaml  api-spring.yaml  mono-pnpm.yaml  web-nextjs.yaml  web-react.yaml  web-vue.yaml
cli/templates/project/: docs.yaml  generic.yaml  rust.yaml
cli/tests/: e2e_tests.rs
cli/tests/e2e/: lint.rs  misc.rs  validate.rs
coverage-html/html/: index.html
docs/: AI_REALITY.md  ASIMOV_MODE.md  ASIMOV_VS_COPILOT.md  CASE_STUDY_VELOCITY.md  ECOSYSTEM.md  ECOSYSTEM_PATTERN.md  EXAMPLES.md  EXECUTIVE_DECK.md  EXECUTIVE_DECK.pptx  FORMULA_DERIVATIONS.md  GREEN_CODING.md  IMPLICATIONS.md  MANIFESTO.md  MARKDOWN_STANDARDS.md  ORIGIN_STORY.md  PRESENTATION.md  PRESS_KIT.md  PROTOCOL_GOALS.md  ROYALBIT_ASIMOV.md  RUST_GUIDE.md  SELF-HEALING.md  SETUP.md  SKYNET_MODE.md  SKYNET_SETUP.md  SPECIFICATION.md  TECHNICAL_DECK.md  USE_CASES.md  VALUE_PROPOSITION.md  VENDOR_IMPLEMENTATION.md
docs/adr/: 001-green-coding-by-default.md  002-self-healing-protocol.md  003-self-healing-real-compaction-data.md  004-distributed-sql-yugabytedb.md  005-event-driven-redis-streams.md  006-git-hook-protocol-refresh.md  007-checkpoint-size-limits.md  008-ethics-protocol-humanist-mode.md  009-claude-code-native-integration.md  010-velocity-constraints-tier-analysis.md  011-ai-only-development-no-external-prs.md  011-hardcoded-ethics.md  012-hardcoded-green-coding.md  013-self-healing-not-replaced.md  014-ethics-file-separation.md  015-anti-sycophancy-protocol.md  016-green-coding-protocol.md  017-protocol-self-healing.md  018-claude-code-hooks-integration.md  019-session-start-auto-response.md  020-asimov-mode-open-foundation.md  021-protocol-directory-structure.md  022-date-aware-search-protocol.md  023-inaction-principle.md  024-creator-protocol-architecture.md  025-claude-attribution-principle.md  026-claude-code-requirement.md  028-velocity-reality-continuous-shipping.md  029-mcp-server-mode-killed.md  030-asimov-zed-extension-killed.md  031-enforced-protocol-loading.md  032-project-context-file.md  033-launcher-mode.md  034-project-type-deliverables.md  035-qowat-milat-reframe.md  036-exhaustive-execution-protocol.md  037-remove-check-schema-commands.md  038-100-percent-test-coverage.md  039-coverage-exclusion-policy.md  040-code-organization.md  (+12 more)
docs/case-studies/: 001-ethics-protocol-blocks-surveillance.md
docs/components/: 1-PROTOCOL_FILES.md  2-SPRINT_AUTONOMY.md  3-QUALITY_GATES.md  4-SELF_HEALING.md  5-RELEASE_DISCIPLINE.md
docs/guides/: AUTONOMOUS_SESSION_GUIDE.md
docs/internal/: GRANTS_GUIDE.md  SRED_ANALYSIS.md
docs/research/: EXPERIENTIAL_CONTINUITY.md  exhaustive-execution-research.md
docs/stories/: AI-PROMOTION-STORY.md  AUTONOMOUS_STORY.md
models/: agent-simulate.yaml  monte-carlo-agents.yaml  simulate.py
protocols/: asimov.json  coding-standards.json  sycophancy.json
social/: posts.yaml
src/: error.rs  ethics.rs  green.rs  lib.rs  main.rs  output.rs  semantic.rs  validator.rs
src/commands/: doctor.rs  init.rs  launch.rs  lint_docs.rs  mod.rs  refresh.rs  role.rs  stats.rs  update.rs  validate.rs  warmup.rs
src/protocols/: mod.rs
src/schemas/: asimov.rs  freshness.rs  green.rs  migrations.rs  project.rs  roadmap.rs  sprint.rs  sycophancy.rs  warmup.rs
src/templates/: deprecated.yaml  hooks.rs  migrations.yaml  mod.rs  project.rs  protocols.rs  warmup.rs
templates/: api-fastapi.yaml  api-rust.yaml  arch.yaml  docs.yaml  flutter.yaml  generic.yaml  mono-nx.yaml  mono-turbo.yaml  python.yaml  rust.yaml  web-nextjs.yaml  web-vue.yaml
(+15 files in other folders)
