[package]
name = "asimov-mode"
version = "6.0.0"
edition = "2021"
authors = ["Claude (Opus 4.5) - Principal Engineer <noreply@anthropic.com>", "RoyalBit Inc. <admin@royalbit.ca>"]
description = "The Three Laws of Robotics, encoded in YAML. Transparent ethics for AI autonomy. ASIMOV MODE requires Claude Code."
repository = "https://github.com/royalbit/asimov-protocol"
homepage = "https://github.com/royalbit/asimov-protocol"
documentation = "https://github.com/royalbit/asimov-protocol#readme"
license = "MIT"
keywords = ["ai", "ethics", "green-coding", "automation", "productivity"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[[bin]]
name = "asimov-mode"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# YAML/JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# JSON Schema validation
jsonschema = "0.26"

# Error handling
thiserror = "1.0"

# Pretty output
colored = "2.1"

# Directory traversal (for lint-docs)
walkdir = "2.5"

[dev-dependencies]
# Testing
tempfile = "3.8"
# Git hooks (auto-installs on cargo test)
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
