[package]
name = "royalbit-asimov"
version = "9.2.0"
edition = "2021"
authors = ["Claude (Opus 4.5) - Principal Autonomous AI <noreply@anthropic.com>", "RoyalBit Inc. <admin@royalbit.ca>"]
description = "RoyalBit Asimov - The ethical operating system for Claude's autonomous power. Claude provides velocity, Asimov provides guardrails."
repository = "https://github.com/royalbit/asimov"
homepage = "https://github.com/royalbit/asimov"
documentation = "https://github.com/royalbit/asimov#readme"
license = "LicenseRef-Proprietary"
publish = false
readme = "../README.md"

[features]
# Enable coverage attribute (requires nightly)
coverage = []

[lib]
name = "royalbit_asimov"
path = "src/lib.rs"

[[bin]]
name = "asimov"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# YAML/JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# JSON Schema validation
jsonschema = "0.37"

# Error handling
thiserror = "2.0"

# Pretty output
colored = "3.0"

# Directory traversal (for lint-docs)
walkdir = "2.5"

# Regex (for semantic linting)
regex = "1.10"

# Date/time (for protocol date injection - ADR-031)
chrono = "0.4"

[dev-dependencies]
# Testing
tempfile = "3.8"
# HTTP mocking for update tests
mockito = "1.2"
# Git hooks (auto-installs on cargo test)
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
